--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Hello, world!</h1>
     <p>My first web page.</p>
-    <img scr = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy5IzBTFk9liWrhcZlMemDE3joQiUiIZ0zhw&usqp=CAU"/>
+    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy5IzBTFk9liWrhcZlMemDE3joQiUiIZ0zhw&usqp=CAU"/>
   </body>
 </html>
