--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <p>My first web page.</p>
+    <h2>Cute robot</h2>
     <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy5IzBTFk9liWrhcZlMemDE3joQiUiIZ0zhw&usqp=CAU" hight = "1000" width = "1000"/>
+    <style>
+      h2 {
+        text-align: center;
+      }
+    </style>
   </body>
 </html>
