--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       h2 {
         text-align: center;
       }
+      
+      img {
+        image-align: center;
+      }
     </style>
   </body>
 </html>
