--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Hello, world!</h1>
     <h2>Cute robot</h2>
-    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy5IzBTFk9liWrhcZlMemDE3joQiUiIZ0zhw&usqp=CAU" hight = "1000" width = "1000"/>
+    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy5IzBTFk9liWrhcZlMemDE3joQiUiIZ0zhw&usqp=CAU" width = "1000" class="center"/>
     <style>
       h2 {
         text-align: center;
@@ -15,6 +15,11 @@
       
       img {
         image-align: center;
+      }
+      center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
       }
     </style>
   </body>
